# Bindy

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  bindy-config.h.in  bindy-static.h  bindy.cpp  bindy.h  bindy.sln  client-server.cpp  sample_keyfile.s3db  sample_keyfile.sqlite  tinythread.cpp
bindy/: Makefile  bindy.cpp  bindy.h  bindy.vcproj  client-server.cpp  wrapper.cpp  wrapper.h
crypto++/: cryptdll.vcproj  cryptest.sln  cryptest.vcproj  cryptlib.vcproj
